--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,6 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
